--- a/.k8s/gcp-workshop.yml
+++ b/.k8s/gcp-workshop.yml
@@ -17,6 +17,9 @@ spec:
         image: tomqwu/gcp-workshop:0.0.1
         ports:
         - containerPort: 3000
+        env:
+          - name: GITSHA
+            value: 83262352
 ---
 kind: Service
 apiVersion: v1
